# codegen

./: .gitignore  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Container.cpp  Container.h  DataStore.cpp  DataStore.h  DataStore.template.cpp  DataStore.template.h  DataType.cpp  DataType.h  Document.cpp  Document.h  Field.cpp  Field.h  Formatter.cpp  Formatter.h  JsonReader.cpp  JsonReader.h  LICENSE  Logging.cpp  Logging.h  Message.cpp  Message.h  MessageField.cpp  MessageField.h  Object.h  Platform.h  README.md  Tag.cpp  Tag.h  generate.sh
test/: TestRunner.cxx  data.json
